gnome-initial-setup does not run on GTK 4.17 - it hits the new `gdk_display_manager_get() was called before gtk_init()` check
GTK 4.17 introduced an intentional crash in any application that does gdk_display_manager_get()
before gtk_init()
- see gtk!7836 (merged) . gnome-initial-setup falls foul of this and fails to start:
Nov 08 10:00:53 fedora gnome-initial-s[2017]: gdk_display_manager_get() was called before gtk_init()
This makes g-i-s entirely non-functional with GTK 4.17.