Explicitly call adw_init()

A call to gtk_init() that once appeared at this point in main() was
removed in commit 7c617821906aabcaef0cd28fba0289fc90f2003d:

> Make GisDriver inherit from AdwApplication instead of GtkApplication,
> which allows removing the adw_init() call.

The libadwaita documentation supports this theory:

> This function can be used instead of gtk_init() as it initializes GTK
> implicitly.
>
> There’s no need to call this function if you’re using AdwApplication.

gtk_init()'s documentation is a little more cautious:

> If you are using GtkApplication, you usually don’t have to call this
> function; the GApplication::startup handler does it for you. Though,
> if you are using GApplication methods that will be invoked before
> startup, such as local_command_line, you may need to initialize stuff
> explicitly.

GTK 4.17.0 added an assertion that fails if gtk_init() has not been
called prior to accessing the default display. Initial Setup triggers
this assertion because of the call to adw_style_manager_get_default()
later in main(), added in the same commit, after constructing the
GisDriver (subclass of AdwApplication):

  driver = gis_driver_new (mode);
  adw_style_manager_set_color_scheme (adw_style_manager_get_default (),
                                      ADW_COLOR_SCHEME_PREFER_LIGHT);

This is too early because AdwApplication, like GApplication, only calls
adw_init() in ::startup.

Call adw_init() explicitly.

Fixes https://gitlab.gnome.org/GNOME/gnome-initial-setup/-/issues/223